# wordtangible

./: LICENSE  README.md  pyproject.toml
tests/: test_concrete.py
wordtangible/: __init__.py  concrete.py
wordtangible/resources/: concreteness_ratings.csv
