[tool.poetry]
name = "wordtangible"
version = "0.1.0"
description = ""
authors = ["Jason Robison <jrrobison1@hoodsen.me>"]
readme = "README.md"
include = ["wordtangible/resources/*.csv"]

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
